Integrated Cloudinary and added image uploading.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.wajahatkarim3.huginary.android">
 
-    <application
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <application android:name=".app.HuginaryApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -16,6 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="CLOUDINARY_URL"
+            android:value="${cloudinaryUrl}" />
+
     </application>
 
 </manifest>
