--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,12 +13,24 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        // filter in the api credentials before building but without changing original source
+        // files - to make sure the  credentials are not checked into source control.
+        // The url (without api secret!) is taken from a gradle property  defined in
+        // gradle-local.properties in the project root.
+        manifestPlaceholders = [cloudinaryUrl: project.getCloudinaryUrl() ?: ""]
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    dataBinding {
+        enabled true
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
 
@@ -31,4 +43,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // Cloudinary
+    implementation 'com.cloudinary:cloudinary-android:1.24.0'
+
+    implementation 'com.github.nguyenhoanglam:ImagePicker:1.3.3'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
