--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.3.41'
     repositories {
         google()
+        maven { url "https://jitpack.io" }
         jcenter()
         
     }
@@ -18,6 +19,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        maven { url "https://jitpack.io" }
         jcenter()
         
     }
@@ -26,3 +28,30 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+// Cloudinary
+ext.loadExtraProperties = { fileName ->
+    def props = new Properties()
+    props.load(new FileInputStream(fileName))
+
+    props.each { key, val ->
+        project.ext[key] = val
+    }
+}
+
+ext.getCloudinaryUrl = { ->
+    return findProperty("cloudinaryUrl") ?: System.getenv('CLOUDINARY_URL')
+}
+
+ext.generateAndLoadLocalGradleProperties = { rootPath ->
+    // Create default local gradle properties file (ignored by git)
+    def file = new File('gradle-local.properties')
+    if (file.createNewFile())
+    {
+        file.text = '# Uncomment and fill in your cloudinary url from cloudinary.com/console.  *** IMPORTANT - This should be the url WITHOUT the api secret.\n# cloudinaryUrl=fill_in_your_cloudinary_url'
+    }
+
+    loadExtraProperties file.absoluteFile
+}
+
+generateAndLoadLocalGradleProperties ''
