--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,10 @@ android {
         manifestPlaceholders = [cloudinaryUrl: project.getCloudinaryUrl() ?: ""]
     }
     buildTypes {
+        debug {
+            buildConfigField "String", "UNSPLASH_ACCESS_KEY", project.getUnsplashAccessKey()
+            buildConfigField "String", "UNSPLASH_SECRET_KEY", project.getUnsplashSecretKey()
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -49,4 +53,5 @@ dependencies {
 
     implementation 'com.github.nguyenhoanglam:ImagePicker:1.3.3'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.unsplash.pickerandroid:photopicker:1.0.0'
 }
